--- a/client/Views/_new_account_dialog.html
+++ b/client/Views/_new_account_dialog.html
@@ -11,12 +11,12 @@
 		</md-toolbar>
 
 		<script type="text/ng-template" id="new_account_buttons.html">
-			<div class="md-dialog-content" layout="row" layout-align="center center" layout-fill="">
+			<div class="md-dialog-content" layout="column" layout-align="center center" layout-fill="">
 				<!-- https://developers.google.com/identity/sign-in/web/server-side-flow -->
 				<!--<google-sign-in-button button-id="google-signin-button" options="google"></google-sign-in-button>-->
-				<button ng-click="login_google()">Login Google</button>
-				<button ng-click="login_dropbox()">Login Dropbox</button>
-				<button ng-click="login_onedrive()">Login OneDrive</button>
+				<button ng-click="login_google()">{{ "USER.ACCOUNT.GOOGLE" | translate }}</button>
+				<button ng-click="login_dropbox()">{{ "USER.ACCOUNT.DROPBOX" | translate }}</button>
+				<button ng-click="login_onedrive()">{{ "USER.ACCOUNT.ONEDRIVE" | translate }}</button>
 			</div>
 		</script>
 
