--- a/client/Views/_folder.html
+++ b/client/Views/_folder.html
@@ -136,12 +136,12 @@
 										</md-button>
 										<md-menu-content width="3">
 											<md-menu-item>
-												<md-button ng-click="folder.move_folder(sub)">
+												<md-button ng-click="ui.folder.move_folder(sub)">
 													{{ "FILE.MOVE" | translate }}
 												</md-button>
 											</md-menu-item>
 											<md-menu-item>
-												<md-button ng-click="folder.delete_folder(sub)">
+												<md-button ng-click="ui.folder.delete_folder(sub)">
 													{{ "FILE.DELETE" | translate }}
 												</md-button>
 											</md-menu-item>
@@ -171,12 +171,12 @@
 									</md-button>
 									<md-menu-content width="3">
 										<md-menu-item>
-											<md-button ng-click="folder.move_file(file)">
+											<md-button ng-click="ui.folder.move_file(file)">
 												{{ "FILE.MOVE" | translate }}
 											</md-button>
 										</md-menu-item>
 										<md-menu-item>
-											<md-button ng-click="folder.delete_file(file)">
+											<md-button ng-click="ui.folder.delete_file(file)">
 												{{ "FILE.DELETE" | translate }}
 											</md-button>
 										</md-menu-item>
