--- a/client/Views/_new_folder_dialog.html
+++ b/client/Views/_new_folder_dialog.html
@@ -18,12 +18,12 @@
 					<div ng-messages="newFolderForm.name.$error" role="alert">
 						<div ng-message="required">{{ "GENERAL.FORM.ERROR.REQUIRED_FIELD" | translate }}</div>
 					</div>
-				</md-input-container>
+				</md-input-container>-->
 				<md-input-container>
 					<label>Account</label>
 					<md-select ng-model="account">
 						<md-option ng-repeat="ac in accounts" ng-value="ac.index">
-							{{ac.type}} - {{ac.email}}
+							{{ac.type}}
 						</md-option>
 					</md-select>
 				</md-input-container>
@@ -42,7 +42,7 @@
 			<md-button type="button" ng-click="close()">
 				Cancel
 			</md-button>
-			<md-button type="submit" style="margin-right:20px;">
+			<md-button type="submit" ng-click="submit()" style="margin-right:20px;">
 				Add
 			</md-button>
 		</md-dialog-actions>
