--- a/client/Views/_new_folder_dialog.html
+++ b/client/Views/_new_folder_dialog.html
@@ -18,7 +18,7 @@
 					<div ng-messages="newFolderForm.name.$error" role="alert">
 						<div ng-message="required">{{ "GENERAL.FORM.ERROR.REQUIRED_FIELD" | translate }}</div>
 					</div>
-				</md-input-container>-->
+				</md-input-container>
 				<md-input-container>
 					<label>Account</label>
 					<md-select ng-model="account">
