--- a/client/Views/_folder.html
+++ b/client/Views/_folder.html
@@ -136,8 +136,8 @@
 										</md-button>
 										<md-menu-content width="3">
 											<md-menu-item>
-												<md-button ng-click="ui.folder.move_folder(sub)">
-													{{ "FILE.MOVE" | translate }}
+												<md-button ng-click="ui.folder.copy_folder(sub)">
+													{{ "FILE.COPY" | translate }}
 												</md-button>
 											</md-menu-item>
 											<md-menu-item>
@@ -171,8 +171,8 @@
 									</md-button>
 									<md-menu-content width="3">
 										<md-menu-item>
-											<md-button ng-click="ui.folder.move_file(file)">
-												{{ "FILE.MOVE" | translate }}
+											<md-button ng-click="ui.folder.copy_file(file)">
+												{{ "FILE.COPY" | translate }}
 											</md-button>
 										</md-menu-item>
 										<md-menu-item>
