add file front end

--- a/client/Views/_new_file_dialog.html
+++ b/client/Views/_new_file_dialog.html
@@ -12,7 +12,7 @@
 
 		<script type="text/ng-template" id="new_file_content.html">
 			<div layout="column">
-				<input type="file" nv-file-select="" uploader="uploader" />
+				<input type="file" nv-file-select="" uploader="uploader" name="file"/>
 				<md-input-container>
 					<label>Account</label>
 					<md-select ng-model="account">
